--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
   "content_scripts": [
     {
       "matches": ["https://www.instagram.com/*"],
-      "js": ["showid.js"]
+      "js": ["showinfo.js"]
     }
   ],
 
