do not use login state (cookie) on incognito mode

--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,8 @@
   "description" : "Show Instagram Id on user page",
   "version": "0.1",
 
+  "incognito": "split",
+
   "background": {
       "scripts": ["eventPage.js"]
   },
